--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Oportunidade Exclusiva</title>
-  <link rel="canonical" href="https://jogodacobra.info/"/>
+  <link rel="canonical" href="https://raspacash.space/"/>
   <style>
     body {
       font-family: Arial, sans-serif;
