--- a/link.html
+++ b/link.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Oportunidade Exclusiva</title>
-  <link rel="canonical" href="https://jogodacobra.info/link.html"/>
+  <link rel="canonical" href="/link.html"/>
   <style>
     body {
       font-family: Arial, sans-serif;
